--- a/ng-app/src/app/provider/supplier-invoice-form/supplier-invoice-form.component.html
+++ b/ng-app/src/app/provider/supplier-invoice-form/supplier-invoice-form.component.html
@@ -4,4 +4,5 @@
     [fields]="fields"
     [includes]="includes"
     [(dataSource)]="formData"
+    (afterSubmit)="redirectTo()"
 ></app-standard-form>
