--- a/ng-app/src/app/customer/invoice-form/invoice-form.component.html
+++ b/ng-app/src/app/customer/invoice-form/invoice-form.component.html
@@ -1,2 +1,2 @@
 <app-standard-form title="Invoice" domainName="invoice" [fields]="fields" [includes]="includes"
-  [(dataSource)]="formData"></app-standard-form>
+  [(dataSource)]="formData" (afterSubmit)="redirectTo()"></app-standard-form>
