--- a/ng-app/src/app/customer/quotation-form/quotation-form.component.html
+++ b/ng-app/src/app/customer/quotation-form/quotation-form.component.html
@@ -1,2 +1,2 @@
 <app-standard-form title="Quotation" domainName="quotation" [fields]="fields" [includes]="includes"
-  [(dataSource)]="formData"></app-standard-form>
+  [(dataSource)]="formData" (afterSubmit)="redirectTo()"></app-standard-form>
