--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -216,8 +216,9 @@
         </div>
 
         <div class="form">
+          <app-standard-display-field [field]="{ name: 'title', type: 'title' }" [formData]="eventPlan.registrationForm"></app-standard-display-field>
+          <app-standard-display-field [field]="{ name: 'description', noLabel: true }" [formData]="eventPlan.registrationForm"></app-standard-display-field>
           <h4>Basic Information</h4>
-          <app-standard-display-field [field]="{ name: 'title' }" [formData]="eventPlan.registrationForm"></app-standard-display-field>
           <div *ngFor="let setting of (eventPlan.registrationForm.settings | toArray | filterOptions: true: 'value')">
             <app-standard-form-field [field]="{ name: setting.key, type: 'string' }"></app-standard-form-field>
           </div>
