--- a/ng-app/src/app/customer/customer-view/customer-view.component.html
+++ b/ng-app/src/app/customer/customer-view/customer-view.component.html
@@ -1,3 +1,22 @@
-<p>
-  customer-view works!
-</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>View Customer</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="mat-h3 section">Basic Information</div>
+    <app-standard-display-field [field]="{ name: 'name' }" [formData]="customer"></app-standard-display-field>
+    <app-standard-display-field [field]="{ name: 'email' }" [formData]="customer"></app-standard-display-field>
+    <app-standard-display-field [field]="{ name: 'registrationNumber' }" [formData]="customer"></app-standard-display-field>
+    <app-standard-display-field [field]="{ name: 'address' }" [formData]="customer"></app-standard-display-field>
+    <div *ngIf="customer?.personInCharged">
+      <div class="mat-h3 section">Person In Charged Details</div>
+      <div class="person-in-charged" *ngFor="let person of customer.personInCharged; let i = index">
+          <div class="mat-body-strong">Person {{ i + 1 }}</div>
+          <app-standard-display-field [field]="{ name: 'name', displayName: 'Name' }" [formData]="person"></app-standard-display-field>
+          <app-standard-display-field [field]="{ name: 'email', displayName: 'Email' }" [formData]="person"></app-standard-display-field>
+          <app-standard-display-field [field]="{ name: 'jobTitle', displayName: 'Job Title' }" [formData]="person"></app-standard-display-field>
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
+<pre>{{ invoices | json }}</pre>
