--- a/ng-app/src/app/customer/customer-view/customer-view.component.html
+++ b/ng-app/src/app/customer/customer-view/customer-view.component.html
@@ -19,4 +19,14 @@
     </div>
   </mat-card-content>
 </mat-card>
-<pre>{{ invoices | json }}</pre>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Related Invoices</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div *ngFor="let invoice of invoices">
+      <app-standard-display-field [field]="displayField" [formData]="invoice" *ngFor="let displayField of invoiceDisplayFields"></app-standard-display-field>
+    </div>
+  </mat-card-content>
+</mat-card>
+<!-- <pre>{{ invoices | json }}</pre> -->
