--- a/ng-app/src/app/standard/standard-display-field/standard-display-field.component.html
+++ b/ng-app/src/app/standard/standard-display-field/standard-display-field.component.html
@@ -1,5 +1,11 @@
 <ng-container [ngSwitch]="field.type">
   <div class="mat-h1" *ngSwitchCase="'title'">{{ getDisplayValue(field, formData) }}</div>
+  <div class="view-field" *ngSwitchCase="'link'">
+    <label class="mat-body-strong" *ngIf="!field.noLabel">{{ field.displayName }}</label>
+    <div class="mat-body">
+      <a [routerLink]="[field.link(formData)]">{{ getDisplayValue(field, formData) }}</a>
+    </div>
+  </div>
   <div class="view-field" *ngSwitchDefault>
     <label class="mat-body-strong" *ngIf="!field.noLabel">{{ field.displayName }}</label>
     <div class="mat-body">{{ getDisplayValue(field, formData) }}</div>
