--- a/ng-app/src/app/standard/standard-display-field/standard-display-field.component.html
+++ b/ng-app/src/app/standard/standard-display-field/standard-display-field.component.html
@@ -6,6 +6,12 @@
       <a [routerLink]="[field.link(formData)]">{{ getDisplayValue(field, formData) }}</a>
     </div>
   </div>
+  
+  <div class="view-field" *ngSwitchCase="'currency'">
+    <label class="mat-body-strong" *ngIf="!field.noLabel">{{ field.displayName }}</label>
+    <div class="mat-body">{{ getDisplayValue(field, formData) | currency: 'MYR ' }}</div>
+  </div>
+
   <div class="view-field" *ngSwitchDefault>
     <label class="mat-body-strong" *ngIf="!field.noLabel">{{ field.displayName }}</label>
     <div class="mat-body">{{ getDisplayValue(field, formData) }}</div>
