--- a/ng-app/src/app/provider/provider-service-form/provider-service-form.component.html
+++ b/ng-app/src/app/provider/provider-service-form/provider-service-form.component.html
@@ -1,1 +1,1 @@
-<app-standard-form title="Provider Service" domainName="provider-service" [fields]="fields" [includes]="includes"></app-standard-form>
+<app-standard-form title="Provider Service" domainName="provider-service" [fields]="fields" [includes]="includes" [(dataSource)]="formData" (afterSubmit)="redirectTo()"></app-standard-form>
