--- a/ng-app/src/app/provider/provider-view/provider-view.component.html
+++ b/ng-app/src/app/provider/provider-view/provider-view.component.html
@@ -1,39 +1,79 @@
-<mat-tab-group>
+<div class="mat-display-1">View Provider <span *ngIf="provider._id">- {{ provider.name }}</span></div>
+
+<mat-tab-group [selectedIndex]="selectedTabIndex" *ngIf="provider._id">
   <mat-tab label="Basic Information">
     <mat-card>
-      <mat-card-header>
-        <mat-card-title>View Provider</mat-card-title>
-      </mat-card-header>
       <mat-card-content>
-        <div class="mat-h3 section">Basic Information</div>
-        <app-standard-display-field [field]="{ name: 'name' }" [formData]="provider"></app-standard-display-field>
-        <app-standard-display-field [field]="{ name: 'email' }" [formData]="provider"></app-standard-display-field>
-        <app-standard-display-field [field]="{ name: 'registrationNumber' }" [formData]="provider">
+        <app-standard-display-field [field]="displayField" [formData]="provider"
+          *ngFor="let displayField of providerDisplayFields"></app-standard-display-field>
+      </mat-card-content>
+    </mat-card>
+  </mat-tab>
+
+  <mat-tab label="Person In Charged">
+    <mat-card *ngFor="let person of provider.personInCharged; let i = index">
+      <mat-card-content>
+        <div class="mat-body-strong">Person {{ i + 1 }}</div>
+        <app-standard-display-field [field]="displayField" [formData]="person"
+          *ngFor="let displayField of personInChargedDisplayFields">
         </app-standard-display-field>
-        <app-standard-display-field [field]="{ name: 'address' }" [formData]="provider"></app-standard-display-field>
-        <div *ngIf="provider?.personInCharged">
-          <div class="mat-h3 section">Person In Charged Details</div>
-          <div class="person-in-charged" *ngFor="let person of provider.personInCharged; let i = index">
-            <div class="mat-body-strong">Person {{ i + 1 }}</div>
-            <app-standard-display-field [field]="{ name: 'name', displayName: 'Name' }" [formData]="person">
-            </app-standard-display-field>
-            <app-standard-display-field [field]="{ name: 'email', displayName: 'Email' }" [formData]="person">
-            </app-standard-display-field>
-            <app-standard-display-field [field]="{ name: 'jobTitle', displayName: 'Job Title' }" [formData]="person">
-            </app-standard-display-field>
-          </div>
-        </div>
       </mat-card-content>
     </mat-card>
   </mat-tab>
 
   <mat-tab label="Services">
     <h1>Services</h1>
+    
+    <button mat-raised-button color="primary" type="button" [routerLink]="['/provider-service/add']" [queryParams]="{ provider: provider._id }" [queryParams]="{ callback: '/provider/view/' + provider._id, fragment: 2 }">New Service</button>
+
+    <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Unit</th>
+            <th>Unit Price</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let line of providerServices">
+            <td>{{ line.name }}</td>
+            <td>{{ line.unit }}</td>
+            <td>{{ line.unitPrice | currency: 'MYR ' }}</td>
+            <td>
+              <button mat-raised-button color="primary" type="button" [routerLink]="['/provider-service/edit/' + line._id ]" [queryParams]="{ callback: '/provider/view/' + provider._id, fragment: 2 }">Edit</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     <pre>{{ providerServices | json }}</pre>
   </mat-tab>
 
   <mat-tab label="Facilities">
     <h1>Facilities</h1>
+
+    <button mat-raised-button color="primary" type="button" [routerLink]="['/provider-facility/add']" [queryParams]="{ provider: provider._id }" [queryParams]="{ callback: '/provider/view/' + provider._id, fragment: 3 }">New Facility</button>
+
+    <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Unit</th>
+            <th>Unit Price</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let line of providerFacilities">
+            <td>{{ line.name }}</td>
+            <td>{{ line.unit }}</td>
+            <td>{{ line.unitPrice | currency: 'MYR ' }}</td>
+            <td>
+              <button mat-raised-button color="primary" type="button" [routerLink]="['/provider-facility/edit/' + line._id ]" [queryParams]="{ callback: '/provider/view/' + provider._id, fragment: 3 }">Edit</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     <pre>{{ providerFacilities | json }}</pre>
   </mat-tab>
 
