provider + payment voucher
- remove drawee information from payment voucher

--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -615,11 +615,11 @@
                 <div class="mat-body">{{ paymentVoucher.chequeInfo.payeeName }}
                   ({{ paymentVoucher.chequeInfo.payeeIdentityNumber }})</div>
               </div>
-              <div class="view-field">
+              <!-- <div class="view-field">
                 <label class="mat-body-strong">Drawee</label>
                 <div class="mat-body">{{ paymentVoucher.chequeInfo.draweeName }}
                   ({{ paymentVoucher.chequeInfo.draweeIdentityNumber }})</div>
-              </div>
+              </div> -->
               <div class="view-field">
                 <label class="mat-body-strong">Issued Date</label>
                 <div class="mat-body">{{ paymentVoucher.chequeInfo.issuedDate | date: 'dd-MM-yyyy' }}</div>
