--- a/ng-app/src/app/provider/provider-view/provider-view.component.html
+++ b/ng-app/src/app/provider/provider-view/provider-view.component.html
@@ -82,7 +82,7 @@
         <mat-card-content>
           <app-standard-display-field [field]="displayField" [formData]="invoice"
             *ngFor="let displayField of supplierInvoiceDisplayFields"></app-standard-display-field>
-  
+
           <table class="table table-bordered">
             <thead>
               <tr>
@@ -105,11 +105,87 @@
           </table>
         </mat-card-content>
       </mat-card>
-    <pre>{{ supplierInvoices | json }}</pre>
+    <!-- <pre>{{ supplierInvoices | json }}</pre> -->
   </mat-tab>
 
   <mat-tab label="Payment Vouchers">
-    <h1>Payment Vouchers</h1>
-    <pre>{{ paymentVouchers | json }}</pre>
+      <mat-card *ngFor="let paymentVoucher of paymentVouchers">
+        <mat-card-content>
+          <app-standard-display-field [field]="displayField" [formData]="paymentVoucher"
+            *ngFor="let displayField of paymentVoucherDisplayFields"></app-standard-display-field>
+
+            <div *ngIf="paymentVoucher.paymentType === 'Cheque'">
+              <div class="mat-h3">Cheque Details</div>
+              <div class="view-field">
+                <label class="mat-body-strong">Reference No.</label>
+                <div class="mat-body">{{ paymentVoucher.chequeInfo.referenceNumber }}</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Payee</label>
+                <div class="mat-body">{{ paymentVoucher.chequeInfo.payeeName }}
+                  ({{ paymentVoucher.chequeInfo.payeeIdentityNumber }})</div>
+              </div>
+              <!-- <div class="view-field">
+                <label class="mat-body-strong">Drawee</label>
+                <div class="mat-body">{{ paymentVoucher.chequeInfo.draweeName }}
+                  ({{ paymentVoucher.chequeInfo.draweeIdentityNumber }})</div>
+              </div> -->
+              <div class="view-field">
+                <label class="mat-body-strong">Issued Date</label>
+                <div class="mat-body">{{ paymentVoucher.chequeInfo.issuedDate | date: 'dd-MM-yyyy' }}</div>
+              </div>
+            </div>
+            <div *ngIf="paymentVoucher.paymentType === 'BankTransfer'">
+                <div class="mat-h3">Bank Transfer Details</div>
+              <div class="view-field">
+                <label class="mat-body-strong">Reference No.</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.referenceNumber }}</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Bank</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.bank }}</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Account Number</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.accountNumber }}</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Payee</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.payeeName }}
+                  ({{ paymentVoucher.bankTransferInfo.payeeIdentityNumber }})</div>
+              </div>
+              <div class="view-field">
+                <label class="mat-body-strong">Transfered Date</label>
+                <div class="mat-body">{{ paymentVoucher.bankTransferInfo.transferedDate | date: 'dd-MM-yyyy' }}</div>
+              </div>
+            </div>
+            <div class="view-field" *ngIf="paymentVoucher.remarks">
+              <label class="mat-body-strong">Remarks</label>
+              <div class="mat-body">{{ paymentVoucher.remarks }}</div>
+            </div>
+
+            <table class="table table-bordered payment-vouchers">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Unit</th>
+                    <th>Unit Price</th>
+                    <th>Quantity</th>
+                    <th>Sub Total</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let line of paymentVoucher.lines">
+                    <td>{{ line.name }}</td>
+                    <td>{{ line.unit }}</td>
+                    <td>{{ line.unitPrice }}</td>
+                    <td>{{ line.quantity }}</td>
+                    <td>{{ (line.unitPrice * line.quantity) | currency: 'MYR ' }}</td>
+                  </tr>
+                </tbody>
+              </table>
+        </mat-card-content>
+      </mat-card>
+    <!-- <pre>{{ paymentVouchers | json }}</pre> -->
   </mat-tab>
 </mat-tab-group>
